@@ -111,6 +111,28 @@ for my $skip_skip (0, 1) {
   );
 }
 
+{
+  my $tzil = Builder->from_config(
+    { dist_root => 'corpus/dist/DZT' },
+    {
+      add_files => {
+        'source/_Inline/foo.c'  => "This file is cruft.\n",
+        'source/dist.ini' => simple_ini('GatherDir', 'PruneCruft'),
+      },
+    },
+  );
+
+  $tzil->build;
+
+  my @files = map {; $_->name } @{ $tzil->files };
+
+  is_filelist(
+    [ @files ],
+    [ qw(dist.ini lib/DZT/Sample.pm t/basic.t) ],
+    "./_Inline/* is excluded by default...",
+  );
+}
+
 for my $arg (qw(filename filenames)) {
   my $tzil = Builder->from_config(
     { dist_root => 'corpus/dist/DZT' },
